--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,12 +1,13 @@
 <img src="/images/bbq.png" class="bbq" />
-<div class="try_index">
-  <p>" TRY !! "をクリックするだけ🎶</p>
-<div class="try_index">
-  <p>新規ブログを作成しよう</p>
-<div class="try_index">
-<div class="try_index">
+<div class="try_index1">
+  " TRY !! "をクリックするだけ🎶
+</div>
+<div class="try_index2">
+  新規ブログを作成しよう
+</div>
+<div class="try_index3">
   <a><%= link_to 'TRY !!', new_blog_path %></a>
-<div class="try_index">
+</div>
 
 </div>
 <div class="past_blog">
