--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -56,7 +56,7 @@ div.try_index {
     margin-top: 200px;
 }
 
-div.try_index1 {
+div.try_index p {
     margin: 0;
     padding: 0 0.8em;
     font-size: 40px;
@@ -64,15 +64,7 @@ div.try_index1 {
     color: #fff;
 }
 
-div.try_index2 {
-    margin: 0;
-    padding: 0 0.8em;
-    font-size: 40px;
-    text-align: center;
-    color: #fff;
-}
-
-div.try_index3 a {
+div.try_index a {
     margin: 0;
     padding: 0 0.8em;
     font-size: 40px;
