--- a/app/views/blogs/top.html.erb
+++ b/app/views/blogs/top.html.erb
@@ -2,4 +2,8 @@
 <div class="try_index">
   <p>" TRY !! "をクリックするだけ🎶</p>
   <a><%= link_to '新規ブログを作成しよう 　TRY !!', new_blog_path %></a>
-</div>sd
+</div>
+
+<div class="blog_list">
+  <%= link_to "ブログ一覧画面にもどる", blogs_path %>
+</div>
