--- a/app/assets/stylesheets/tops_controller.scss
+++ b/app/assets/stylesheets/tops_controller.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the top_controller controller here.
+// Place all the styles related to the tops_controller controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
