--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -31,5 +31,5 @@
   </div>
 <% end %>
 <div class="blog_list">
-  <%= link_to "ブログ一覧画面にもどる", blogs_path %>
+  <%= link_to "ブログ一覧画面へ", top_blogs_path %>
 </div>
