--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -24,5 +24,5 @@
   <%= form.hidden_field :content %>
 <% end %>
 <div class="blog_list">
-  <%= link_to "ブログ一覧画面にもどる", blogs_path %>
+  <%= link_to "ブログ一覧画面へ", top_blogs_path %>
 </div>
