--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -14,5 +14,5 @@
   <%= form.hidden_field :content %>
 <% end %>
 <div class="blog_list">
-  <%= link_to "ブログ一覧画面へ", top_blogs_path %>
+  <%= link_to "ブログ一覧画面へ", top_blog_path %>
 </div>
