--- a/app/views/blogs/top.html.erb
+++ b/app/views/blogs/top.html.erb
@@ -2,6 +2,8 @@
   過去のブログ一覧
 </div>
 
+<p>新しくブログを作る時は↗︎の　'TRY'　をクリック！</p>
+
 <div class="container">
   <div class="past_blog_list">
     <div class="row">
