--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,9 @@
 <%= yield %>
 
     <footer>
+      <div class="blog_list">
+        <%= link_to "ブログ一覧画面へ", new_blog_path %>
+      </div>
       <p>運営会社 Let's 株式会社</p>
       <p>since 2018.3</p>
     </footer>
