--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
 
     <footer>
       <div class="blog_list">
-        <a><%= link_to "ブログ一覧画面へ", top_path %></a>
+        <a><%= link_to "ブログ一覧画面へ", blogs_tops_top_path %></a>
       </div>
       <p>運営会社 Let's 株式会社</p>
       <p>since 2018.3</p>
