--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <div class="row">
         <div class="col-md-3">
           <div class="header_text1">
-            <a href="https://lit-gorge-63180.herokuapp.com/blogs">Let's ブログ</a>
+            <a href="https://lit-gorge-63180.herokuapp.com/">Let's ブログ</a>
           </div>
         </div>
         <div class="col-md-6">
@@ -34,7 +34,7 @@
 
     <footer>
       <div class="blog_list">
-        <a><%= link_to "ブログ一覧画面へ", index_blogs_path %></a>
+        <a><%= link_to "ブログ一覧画面へ", blogs_index_path %></a>
       </div>
       <p>運営会社 Let's 株式会社</p>
       <p>since 2018.3</p>
