--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,4 +1,4 @@
-<div class="past_blog">
+<div class="description">
   過去のブログ一覧
 </div>
 
@@ -7,7 +7,7 @@
 <div class="container">
   <div class="past_blog_list">
     <div class="row">
-      <% @blogs.each do |blog| %>
+      <% @blog.each do |blog| %>
         <nav class="col-md-4">
           <ul class="blog-panel">
             <div class="blog_title_index">タイトル</div>
