--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -18,7 +18,7 @@ header {
 
 div.header_text1 {
   text-decoration: none;
-  font-size: 70px;
+  font-size: 3vw;
   height: 150px;
   margin: 20px 0 40px 0;
 }
@@ -31,6 +31,7 @@ div.header_text2 {
   text-align: left;
   height: 150px;
   margin: 40px 0 40px 0;
+  font-size: 1vw;
 }
 
 header :after {
@@ -62,6 +63,7 @@ footer p {
 
 html {
   position: relative;
+  min-height: 100%;
 }
 
 body {
