--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,5 +1,3 @@
-
-
 div.description {
   margin-top: 160px;
 }
@@ -25,7 +23,7 @@ div.square_btn:active {/*ボタンを押したとき*/
 }
 /*　button~　*/
 h1 {
-  margin-top: 150px;
+  margin-top: 2vw;
 }
 
 body {
@@ -38,8 +36,7 @@ body {
 /*　画像~　*/
 .bbq {
   width: 100%;
-  height: 800px;
-  margin-top: 150px;
+  height: 1000px;
   background-size: cover;
   background-attachment: fixed;
   object-fit: cover;
@@ -49,7 +46,7 @@ body {
 div.try_index {
     position: absolute;
     top: 250px;
-    color: #fff;
+    color: white;
     background: rgba(0,0,0,.6);
     width: 100%;
     padding: 1em 0;
@@ -60,16 +57,16 @@ div.try_index p {
     margin: 0;
     padding: 0 0.8em;
     font-size: 40px;
-    text-align: left;
-    color: #fff;
+    text-align: center;
+    color: white;
 }
 
 div.try_index a {
     margin: 0;
     padding: 0 0.8em;
-    font-size: 40px;
+    font-size: 60px;
     text-align: center;
-    color: #fff;
+    color: white;
 }
 
 div.past_blog_list {
