--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -1,7 +1,7 @@
 div.container {
   height: auto !important;
   position: relative;
-  padding: 0 0 160px 0;
+  padding: 0 0 150px 0;
   width: 100%;
   background-color: #fffaf0;
 }
@@ -13,25 +13,36 @@ header {
   height: 150px;
   padding: auto;
   z-index: 999;
-  color: #fff;
-}
-
-div.header_text1 {
-  text-decoration: none;
-  font-size: 3vw;
-  height: 150px;
-  margin: 20px 0 40px 0;
-}
-
-div.header_text1 a {
   color: white;
 }
 
-div.header_text2 {
+div.header_text1 a{
+  margin-top: 25px;
+  text-align: center;
+  font-size: 4vw;
+  color: white;
+}
+
+div.header_text2 a{
+  margin-top: 30px;
   text-align: left;
-  height: 150px;
-  margin: 40px 0 40px 0;
-  font-size: 1vw;
+  font-size: 2.5vw;
+  color: white;
+  text-decoration: none;
+}
+
+div.header_text3 a{
+  margin-top: 25px;
+  text-align: center;
+  font-size: 2.5vw;
+  color: white;
+}
+
+div.header_text4 a{
+  margin-top: 25px;
+  text-align: center;
+  font-size: 2.5vw;
+  color: white;
 }
 
 header :after {
@@ -44,18 +55,13 @@ footer {
   position: absolute;
   width: 100%;
   background-color: #008080;
-  padding: 20px 0 10px 0;
+  padding: 20px 0 0 0;
   color: white;
   margin-left: auto;
   margin-right: auto;
   bottom: 0;
-  height: 160px;
+  height: 150px;
 }
-
-div.blog_list a {
-  color: #fff;
-}
-
 
 footer p {
   font-size: 20px;
