--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,10 +1,11 @@
-<div class="description">
-  <h1>過去のブログ一覧</h1>
-</div>
-
-<p>新しくブログを作る時は↗︎の　'TRY'　をクリック！</p>
-
 <div class="container">
+  <div class="description">
+    <h1>過去のブログ一覧</h1>
+  </div>
+
+  <p>新しくブログを書く</p>
+  <a><%= link_to 'TRY !!', new_blog_path %></a>
+
   <div class="past_blog_list">
     <div class="row">
       <% @blog.each do |blog| %>
