--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,5 +1,8 @@
-<div class="description">
-  <h1>ブログを作成する</h1>
-</div>
 
-  <%= render 'form' %>
+<div class="container">
+  <div class="description">
+    <h1>ブログを作成する</h1>
+  </div>
+
+    <%= render 'form' %>
+</div>
