--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Let's ブログ</title>
-  <meta name="viewport" content="width=device-width">
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head></html>
+  <head>
+    <title>Let's ブログ</title>
+    <meta name="viewport" content="width=device-width">
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
+</html>
 <body>
   <div class="container">
     <header>
@@ -18,24 +19,30 @@
         </div>
         <div class="col-md-6">
           <div class="header_text2">
-            せっかく旅行にいったんだから！せっかく仕事頑張ったんだから！<br>
-            忘れないうちにブログを書こう、みんなに報告しよう！
+            <a><% flash.each do |key, value| %>
+            <%= content_tag(:div, value, class: "#{key}") %>
+            <% end %></a>
           </div>
         </div>
         <div class="col-md-3">
-          <div class="header_text1">
-            <a><%= link_to 'TRY !!', new_blog_path %></a>
+          <div class="header_text4">
+            <a>
+              <% if logged_in? %>
+                <%= link_to "Profile", user_path(current_user.id) %>
+                <%= link_to "Logout", session_path(current_user.id), method: :delete %>
+              <% else %>
+                <%= link_to "Sign up", new_user_path %>
+                <%= link_to "Login", new_session_path %>
+              <% end %>
+            </a>
           </div>
         </div>
       </div>
     </header>
 
-<%= yield %>
+    <%= yield %>
 
     <footer>
-      <div class="blog_list">
-        <a><%= link_to "ブログ一覧画面へ", blogs_index_path %></a>
-      </div>
       <p>運営会社 Let's 株式会社</p>
       <p>since 2018.3</p>
     </footer>
